@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

'class Platform {
'  -description
'}

class GSM {
    name
    vatNumber
    phoneNumber
    email
}

class HRM {
    name
    vatNumber
    phoneNumber
    email
}

class Team {
    collaborators
    teamID
}

class AgendaEntry {
     title
     taskDescription
     urgency
     duration
     associatedGreenSpace
     associatedTeam
     associatedVehicles
     status
     startDate
}

class Agenda {
    entries
    gsm
}

class Collaborator {
    name
    birthdate
    admission date
    address
    contact info (mobile and email)
    taxpayer number
    ID doc type and number
    collaboratorskills
}

class AgendaRepository {
    agendas
}

class TeamRepository {
    teams
}
'class User {
'    name
'    email
'    password
'}

HRM "1" -- "1" Team: generates >
GSM "1" - "1" Team: assigns >
Team "1" - "1" AgendaEntry: assigned to >
Team "1" -- "1" TeamRepository: stored in >
GSM "1" --- "1" Agenda: uses >
AgendaEntry "1" --- "1" Agenda: is shown in >
Agenda "1" -- "1" AgendaRepository: stored in
Collaborator "*" -- "1" Team: belongs to >
HRM "1" - "*" Collaborator: registers >

@enduml